--- a/2/2-1.html
+++ b/2/2-1.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
     </head>
+    <title>Lab 2 part 1</title>
     <style>
         B{
             background-color:darksalmon;
