--- a/2/2-3.html
+++ b/2/2-3.html
@@ -47,6 +47,7 @@
             cursor: crosshair;
             
         }
+
     </style>
 </head>
 
@@ -95,7 +96,7 @@ mod_folder/content/0/avatar.jpg" alt="avatar" width="150" height="150">
                                 Pasword:
                             </td>
                             <td>
-                                <input type="text" name="pas">
+                                <input type="password" name="pas" >
                             </td>
                         </tr>
                     </tbody>
