--- a/RK1/index.html
+++ b/RK1/index.html
@@ -4,17 +4,85 @@
     <meta charset="utf-8">
     </head>
 
-    <link  href="index.css" rel="stylesheet">
+    <style>
+    table {
+        border-collapse: collapse;
+    }
+    table, td {
+        border: 1px solid black;
+        background-color: bisque;
+    }
+    </style>
 
+    <script>
+var array= new Array()
+//функция добавления данных в массив
+function append(value){
+    const table=document.getElementById("my-table")
+    const row=table.rows[0]
+    const td=document.createElement("td")
+    td.textContent=value
+    row.appendChild(td);
+}
+
+//мейн функция, считываем данные и добавляем в таблицу
+document.addEventListener("DOMContentLoaded", function() {
+const form = document.getElementById('form'); 
+form.addEventListener('submit', function (event) {
+    event.preventDefault(); //запрет обновления страницы
+    const value = document.getElementById('elem').value
+    if (!isNaN(value) && !(value.trim() =='')){
+        array.push(value)
+        append(value)
+    }
+    else{
+        alert("Input error, there is not number,  try again!")
+    }
+    console.log(array)
+});
+});
+
+var ind=0
+document.addEventListener("DOMContentLoaded", function() {
+const form1= document.getElementById("task")
+form1.addEventListener('submit', function (event) {
+    event.preventDefault(); //запрет обновления страницы
+    const inde = document.getElementById('ind').value
+    ind=inde
+    console.log(ind)
+});
+});
+
+//функция для поиска произведения элемнтов кратных 3 и вывод иго на экран
+
+document.addEventListener("DOMContentLoaded", function() {
+    document.getElementById("calculateButton").addEventListener("click", function() {
+        var pr=1
+        for (i=0;i<array.length; i++){
+            if (array[i]%3 === 0 ){
+                pr*=array[i]
+                console.log(pr)
+            }
+        }
+        array[ind]=pr
+        const output = document.getElementById("out-table")
+        const row=output.rows[0]
+        for (i=0;i<array.length; i++){
+            const td=document.createElement("td")
+            td.textContent=array[i]
+            row.appendChild(td);
+        }
+    });
+});
+    </script>
 
     <body>
         <form id="form">
-            <label for="name">Input element -> </label>
-            <input type="text" id="elem" name="elem"><br><br>
+            <label for="name">Input array -> </label>
+            <input type="text" id="elem" name="elem" value = "1 2 3 4 5 6 7 8 "><br><br>
             <input type="submit" value="Добавить">
         </form>
 
-        <script type="text/javascript" src="main.js"> </script>
         <br>Your array:</br>
 
         <div>
@@ -23,7 +91,18 @@
             </table>
         </div>
 
+        <form id="task">
+            <label for="name">Input index-> </label>
+            <input type="text" id="ind" name="ind"><br><br>
+            <input type="submit" value="Input index">
+        </form>
+
         <button id="calculateButton">Выполнить действия -></button>
-        <p id="task"></p>
+        <div>
+            <table id="out-table">
+                <tr></tr>
+            </table>
+        </div>
+
     </body>
 </html>
